# legal_research_agent

./: .gitignore  README.md  main.py  pyproject.toml
agents/common_utils/: base_models.py  utils.py
agents/deep_research/: prompts.py  reasearch_multi_agent_full.py  research_agent.py  research_supervisor_agent.py  schemas.py  scope_agent.py  states.py
agents/deep_research/tools/: reasoning_tools.py  supervisor_tools.py  tavily_tools.py
agents/main_agent/: graph.py  prompts.py
agents/main_agent/schemas/: amparo_analizador.py
tests/: test_reasearch_multi_agent_full.py  test_research_agent.py  test_research_supervisor_agent.py  test_scope_agent.py
